Updated eda, tweaked some of the comments

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creating variables for how many unusual samples there are for each cell\n",
+    "#Creating the 'Unusual' variable for each cell (whether a sample is anomalous or not)\n",
     "\n",
     "for i in Cells:\n",
     "    globals()[f\"{i}_Unusual\"] = []\n",
@@ -481,7 +481,7 @@
     "plt.xlabel(\"Cell Name\")\n",
     "plt.ylabel(\"% of samples that were anomalous\")\n",
     "plt.axhline(np.mean(Percentages),label = 'Mean Percentage', linestyle = '--', color = 'red')\n",
-    "plt.xticks(rotation = 90) #not sure why this prints a list of numbers and the xticks at the start\n",
+    "plt.xticks(rotation = 90) \n",
     "plt.legend()\n",
     "plt.show()"
    ]
