Updated Model evaluation for XGBoost

--- a/Model_evaluation.ipynb
+++ b/Model_evaluation.ipynb
@@ -1334,7 +1334,9 @@
     "    Fold += 1\n",
     "    X_test = X_df_ft2.iloc[test_index]\n",
     "    Y_test = Y_df.iloc[test_index]\n",
-    "    Predicted = globals()[f\"xgboost_ft2_fold{Fold}\"].predict(X_test)\n",
+    "    Predicted = globals()[f\"xgboost_ft1_fold{Fold}\"].predict(X_test)\n",
+    "    Predicted_Probability = globals()[f\"xgboost_ft1_fold{Fold}\"].predict_proba(X_test)[:,1]\n",
+    "\n",
     "\n",
     "    # Getting Scores\n",
     "    score = globals()[f\"xgboost_ft2_fold{Fold}\"].score(X_test,Y_test)\n",
@@ -1345,17 +1347,17 @@
     "    Mean_cm = Mean_cm + cm \n",
     "\n",
     "    # Getting ROC Curve\n",
-    "    fpr, tpr, thresholds_ROC = roc_curve(Y_test, Predicted)\n",
+    "    fpr, tpr, thresholds_ROC = roc_curve(Y_test, Predicted_Probability)\n",
     "\n",
     "    # Getting AUC values\n",
     "    AUC_ROC = auc(fpr, tpr)\n",
     "    AUC_ROC_List.append(AUC_ROC)\n",
     "\n",
     "    # Getting Precision Recall Display\n",
-    "    Precision, Recall, thresholds_PRD = precision_recall_curve(Y_test, Predicted)\n",
+    "    Precision, Recall, thresholds_PRD = precision_recall_curve(Y_test, Predicted_Probability)\n",
     "\n",
     "    # Getting average precision (AUC)\n",
-    "    AUC_PR = average_precision_score(Y_test, Predicted)\n",
+    "    AUC_PR = average_precision_score(Y_test, Predicted_Probability)\n",
     "    AUC_PR_List.append(AUC_PR)\n",
     "\n",
     "    # Printing Classification Report\n",
