Updated model evaluation (training data)

--- a/Model_evaluation.ipynb
+++ b/Model_evaluation.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,8 @@
      "output_type": "stream",
      "text": [
       "Score for model dtree_ft1: 0.9702933405595827\n",
-      "\tClassification Report for model dtree_ft1:\n",
+      "\n",
+      "Classification Report for model dtree_ft1:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.97      0.99      0.98     21374\n",
@@ -73,7 +74,8 @@
       "   macro avg       0.97      0.95      0.96     29522\n",
       "weighted avg       0.97      0.97      0.97     29522\n",
       "\n",
-      "\tConfusion Matrix for model dtree_ft1: \n",
+      "\n",
+      "Confusion Matrix for model dtree_ft1: \n",
       "[[21180   194]\n",
       " [  683  7465]]\n"
      ]
@@ -103,7 +105,8 @@
      "output_type": "stream",
      "text": [
       "Score for model dtree_ft2: 0.9739516292934083\n",
-      "\tClassification Report for model dtree_ft2:\n",
+      "\n",
+      "Classification Report for model dtree_ft2:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.97      0.99      0.98     21374\n",
@@ -113,7 +116,8 @@
       "   macro avg       0.98      0.96      0.97     29522\n",
       "weighted avg       0.97      0.97      0.97     29522\n",
       "\n",
-      "\tConfusion Matrix for model dtree_ft2: \n",
+      "\n",
+      "Confusion Matrix for model dtree_ft2: \n",
       "[[21250   124]\n",
       " [  645  7503]]\n"
      ]
@@ -143,7 +147,8 @@
      "output_type": "stream",
      "text": [
       "Score for model xgboost_ft1: 0.9986450782467312\n",
-      "\tClassification Report for model xgboost_ft1:\n",
+      "\n",
+      "Classification Report for model xgboost_ft1:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     21374\n",
@@ -153,7 +158,8 @@
       "   macro avg       1.00      1.00      1.00     29522\n",
       "weighted avg       1.00      1.00      1.00     29522\n",
       "\n",
-      "\tConfusion Matrix for model xgboost_ft1: \n",
+      "\n",
+      "Confusion Matrix for model xgboost_ft1: \n",
       "[[21371     3]\n",
       " [   37  8111]]\n"
      ]
@@ -183,7 +189,8 @@
      "output_type": "stream",
      "text": [
       "Score for model xgboost_ft2: 1.0\n",
-      "\tClassification Report for model xgboost_ft2:\n",
+      "\n",
+      "Classification Report for model xgboost_ft2:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     21374\n",
@@ -193,7 +200,8 @@
       "   macro avg       1.00      1.00      1.00     29522\n",
       "weighted avg       1.00      1.00      1.00     29522\n",
       "\n",
-      "\tConfusion Matrix for model xgboost_ft2: \n",
+      "\n",
+      "Confusion Matrix for model xgboost_ft2: \n",
       "[[21374     0]\n",
       " [    0  8148]]\n"
      ]
@@ -235,11 +243,11 @@
     "\n",
     "        # Printing Classification Report\n",
     "        cr = classification_report(Y_df, predicted_outcome)   \n",
-    "        print(f\"\\tClassification Report for model {model}{feature_set}:\\n{cr}\")\n",
+    "        print(f\"\\nClassification Report for model {model}{feature_set}:\\n{cr}\")\n",
     "\n",
     "        # Printing Confusion Matrix\n",
     "        cm = confusion_matrix(Y_df, predicted_outcome)\n",
-    "        print(f\"\\tConfusion Matrix for model {model}{feature_set}: \\n{cm}\")\n",
+    "        print(f\"\\nConfusion Matrix for model {model}{feature_set}: \\n{cm}\")\n",
     "\n",
     "        # Getting ROC and AUC\n",
     "        false_positive_rate, true_positive_rate, roc_thresholds = roc_curve(Y_df, predicted_probability)\n",
